[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/PNG/manBlue_hold.png" type="Texture" id=1]
[ext_resource path="res://Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.gd" type="Script" id=3]
[ext_resource path="res://Weapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://AI.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5, 22.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 138.101

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 48, 44 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11.5, 1.5 )
shape = SubResource( 1 )

[node name="Health" parent="." instance=ExtResource( 2 )]

[node name="Weapon" parent="." instance=ExtResource( 4 )]
position = Vector2( 20, 12 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="PlayerDetectionZone" type="Area2D" parent="AI"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone"]
shape = SubResource( 2 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_exited" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="PatrolTimer" to="AI" method="_on_PatrolTimer_timeout"]
